--- a/src/main/java/com/asksunny/codegen/angular/angularApp.js.tmpl
+++ b/src/main/java/com/asksunny/codegen/angular/angularApp.js.tmpl
@@ -13,6 +13,7 @@ angular
     'ui.router',
     'ui.bootstrap',
     'angular-loading-bar',
+    'ui.bootstrap.datetimepicker',
   ])
   .config(['$stateProvider','$urlRouterProvider','$ocLazyLoadProvider',function ($stateProvider,$urlRouterProvider,$ocLazyLoadProvider) {
     
