--- a/src/main/java/com/asksunny/codegen/java/JavaDomainObject.java.templ
+++ b/src/main/java/com/asksunny/codegen/java/JavaDomainObject.java.templ
@@ -1,7 +1,7 @@
 package #{DOMAIN_PACKAGE_NAME};
 
 import java.io.Serializable;
-
+#{JSON_FORMAT_ANNO_IMPORT}
 
 public class #{ENTITY_NAME} implements Serializable {
 
