--- a/src/main/java/com/asksunny/codegen/angular/angularEntityField.input.html.tmpl
+++ b/src/main/java/com/asksunny/codegen/angular/angularEntityField.input.html.tmpl
@@ -1,5 +1,5 @@
 <div class="form-group">
     <label>#{FIELD_LABEL}</label>
-    <input type="#{HTML_TYPE}" name="#{FIELD_VAR_NAME}"  id="#{FIELD_VAR_NAME}" ng-model="#{ENTITY_VAR_NAME}.#{FIELD_VAR_NAME}" #{FIELD_ATTRIBUTES}>#{DATEPICKER_PICKER_FOR_DATETIME}
+    <input class="form-control"  type="#{HTML_TYPE}" name="#{FIELD_VAR_NAME}"  id="#{FIELD_VAR_NAME}" ng-model="#{ENTITY_VAR_NAME}.#{FIELD_VAR_NAME}" #{FIELD_ATTRIBUTES}>
     <p class="help-block"></p>
 </div>
