--- a/src/main/java/com/asksunny/codegen/angular/angularRadioOpt.html.tmpl
+++ b/src/main/java/com/asksunny/codegen/angular/angularRadioOpt.html.tmpl
@@ -1,5 +1,5 @@
 <div class="radio">
     <label>
-        <input type="radio" name="#{FIELD_VAR_NAME}" id="#{FIELD_VAR_NAME_SEQ}" ng-model="#{ENTITY_VAR_NAME}.#{FIELD_VAR_NAME}" value="#{OPTION_VALUE}">#{OPTION_VALUE}
+        <input class="form-control"  type="radio" name="#{FIELD_VAR_NAME}" id="#{FIELD_VAR_NAME_SEQ}" ng-model="#{ENTITY_VAR_NAME}.#{FIELD_VAR_NAME}" value="#{OPTION_VALUE}">#{OPTION_VALUE}
     </label>
 </div>
