--- a/src/main/java/com/asksunny/codegen/angular/AngularNavigation.html.tmpl
+++ b/src/main/java/com/asksunny/codegen/angular/AngularNavigation.html.tmpl
@@ -5,7 +5,10 @@
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
-            #{APP_NAVIGATIONS}            
+            #{APP_NAVIGATIONS} 
+             <li ui-sref-active="active">
+                <a ui-sref=" dashboard.jscaffold "><i class="fa fa-bar-chart-o fa-fw"></i> JScaffold SQL<span></span></a>
+            </li>                    
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a>
             </li>
