add template support

--- a/src/main/java/com/asksunny/codegen/java/SpringRestJavaController.java.tmpl
+++ b/src/main/java/com/asksunny/codegen/java/SpringRestJavaController.java.tmpl
@@ -4,6 +4,8 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -22,12 +24,16 @@ import #{MAPPER_PACKAGE_NAME}.#{ENTITY_NAME}Mapper;
 @RequestMapping(value = "/#{ENTITY_VAR_NAME}")
 public class #{ENTITY_NAME}RestController {
 
+	static Logger logger = LoggerFactory.getLogger(#{ENTITY_NAME}RestController.class);
 	@Autowired
 	private #{ENTITY_NAME}Mapper #{ENTITY_VAR_NAME}Mapper;
 	
     @RequestMapping(method = { RequestMethod.POST })
     @ResponseBody
     public #{ENTITY_NAME} add#{ENTITY_NAME}(@RequestBody #{ENTITY_NAME} #{ENTITY_VAR_NAME}){
+        if(logger.isDebugEnabled()){
+    		 logger.debug("Receive insert request:{}", #{ENTITY_VAR_NAME});
+    	}
         this.#{ENTITY_VAR_NAME}Mapper.insert#{ENTITY_NAME}(#{ENTITY_VAR_NAME});
         return #{ENTITY_VAR_NAME};
     }
@@ -35,6 +41,9 @@ public class #{ENTITY_NAME}RestController {
     @RequestMapping(method = { RequestMethod.GET })
     @ResponseBody
     public java.util.List<#{ENTITY_NAME}> get#{ENTITY_NAME}(){
+        if(logger.isDebugEnabled()){
+    		 logger.debug("Receive get All request.");
+    	}
         java.util.List<#{ENTITY_NAME}> ret = this.#{ENTITY_VAR_NAME}Mapper.select#{ENTITY_NAME}();
         return ret;
     }
