--- a/src/main/java/com/asksunny/codegen/java/pom.xml.tmpl
+++ b/src/main/java/com/asksunny/codegen/java/pom.xml.tmpl
@@ -10,8 +10,10 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>		
 		<org.springframework.version>4.2.2.RELEASE</org.springframework.version>		
 		<slf4j.version>1.7.6</slf4j.version>
+		<jetty.version>9.2.13.v20150730</jetty.version>		
 		<mybatis.version>3.3.0</mybatis.version>
 		<mybatis.spring.version>1.2.3</mybatis.spring.version>
+		<jackson.version>2.6.3</jackson.version>
 	</properties>
 	<build>
 		<plugins>
@@ -72,22 +74,24 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>${org.springframework.version}</version>
 		</dependency>
+		
+		
 
 		<dependency>
 			<groupId>org.eclipse.jetty.aggregate</groupId>
 			<artifactId>jetty-all</artifactId>
-			<version>9.2.13.v20150730</version>
+			<version>${jetty.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.6.3</version>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
-			<version>2.6.3</version>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<dependency>
@@ -102,6 +106,13 @@
 			<version>${slf4j.version}</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${org.springframework.version}</version>
+			<scope>test</scope>
+		</dependency>		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
