--- a/src/main/java/com/asksunny/codegen/java/JScaffoldObjectModelController.java.tmpl
+++ b/src/main/java/com/asksunny/codegen/java/JScaffoldObjectModelController.java.tmpl
@@ -1,4 +1,4 @@
-package package #{REST_PACKAGE_NAME};
+package #{REST_PACKAGE_NAME};
 
 import java.io.IOException;
 import java.io.InputStream;
@@ -87,7 +87,7 @@ public class JScaffoldObjectModelController {
 						row.add(rs.getString(i));
 					}
 					result.add(row);
-					if(rows>=1000){
+					if(rows>=200){
 						break;
 					}
 				}
