--- a/src/main/java/com/asksunny/codegen/java/pom.xml.tmpl
+++ b/src/main/java/com/asksunny/codegen/java/pom.xml.tmpl
@@ -14,6 +14,7 @@
 		<mybatis.version>3.3.0</mybatis.version>
 		<mybatis.spring.version>1.2.3</mybatis.spring.version>
 		<jackson.version>2.6.3</jackson.version>
+		<junit.version>4.11</junit.version>
 	</properties>
 	<build>
 		<plugins>
@@ -31,7 +32,15 @@
 	</build>
 	
 	<dependencies>		
-		#{GENERATOR_PROJECT_DEPENDENCY}		
+		#{GENERATOR_PROJECT_DEPENDENCY}	
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+			
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
