--- a/src/main/java/com/asksunny/codegen/java/pom.xml.tmpl
+++ b/src/main/java/com/asksunny/codegen/java/pom.xml.tmpl
@@ -40,6 +40,21 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+		
 			
 		<dependency>
 			<groupId>commons-io</groupId>
