--- a/src/main/java/com/asksunny/codegen/java/pom.xml.tmpl
+++ b/src/main/java/com/asksunny/codegen/java/pom.xml.tmpl
@@ -15,6 +15,7 @@
 		<mybatis.spring.version>1.2.3</mybatis.spring.version>
 		<jackson.version>2.6.3</jackson.version>
 		<junit.version>4.11</junit.version>
+		<spring-security-version>4.0.3.RELEASE</spring-security-version>
 	</properties>
 	<build>
 		<plugins>
@@ -99,7 +100,17 @@
 			<version>${org.springframework.version}</version>
 		</dependency>
 		
-		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring-security-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring-security-version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.jetty.aggregate</groupId>
